--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hexadecimal-app",
+  "name": "hexadecimal-converter",
   "version": "0.1.0",
   "homepage": "https://github.com/carolliie/hexadecimal-converter.git",
   "private": true,
