--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hexadecimal-converter",
   "version": "0.1.0",
-  "homepage": "https://github.com/carolliie/hexadecimal-converter.git",
+  "homepage": "https://carolliie.github.io/hexadecimal-converter",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
