--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
+    "gh-pages": "^6.1.1"
   }
 }
